finished overflow fixes

--- a/source/sass/blocks/footer/bottom.scss
+++ b/source/sass/blocks/footer/bottom.scss
@@ -6,18 +6,18 @@
   align-items: center;
   justify-content: flex-start;
   gap: 18px;
-  position: relative;
+  // position: relative;
 
-  &::before {
-    position: absolute;
-    content: "";
-    width: 100vw;
-    left: calc((100vw - 100%) / -2);
-    height: 1px;
-    background-color: $primary;
-    top: -23px;
-    opacity: 20%;
-  }
+  // &::before {
+  //   position: absolute;
+  //   content: "";
+  //   width: 100vw;
+  //   left: calc((100vw - 100%) / -2);
+  //   height: 1px;
+  //   background-color: $primary;
+  //   top: -23px;
+  //   opacity: 20%;
+  // }
 }
 
 .bottom__phone {
@@ -75,9 +75,9 @@
     align-items: flex-start;
     row-gap: 24px;
 
-    &::before {
-      top: -35px;
-    }
+    // &::before {
+    //   top: -35px;
+    // }
   }
 }
 
@@ -87,9 +87,9 @@
     padding: 32px 120px;
     gap: 17px;
 
-    &::before {
-      top: 0;
-    }
+    // &::before {
+    //   top: 0;
+    // }
   }
 
   .bottom__phone {
