--- a/source/sass/blocks/footer/contacts.scss
+++ b/source/sass/blocks/footer/contacts.scss
@@ -4,7 +4,19 @@
   flex-flow: wrap column;
   align-items: flex-start;
   gap: 30px;
-  padding: 16px 0 20px;
+  padding: 16px 0 40px;
+  position: relative;
+
+  &::before {
+    position: absolute;
+    content: "";
+    width: 100vw;
+    left: calc((100vw - 100%) / -2);
+    height: 1px;
+    background-color: $primary;
+    bottom: 21px;
+    opacity: 20%;
+  }
 }
 
 .contacts__info-wrapper {
@@ -153,7 +165,11 @@
   .contacts {
     min-height: 654px;
     gap: 40px;
-    padding: 0;
+    padding: 0 0 60px;
+
+    &::before {
+      bottom: 34px;
+    }
   }
 
   .contacts__info-wrapper {
@@ -208,6 +224,10 @@
     grid-template-columns: 1fr 600px;
     gap: 100px;
     padding: 0 120px 95px 0;
+
+    &::before {
+      bottom: 0;
+    }
   }
 
   .contacts__info-wrapper {
