--- a/source/sass/blocks/footer/socials.scss
+++ b/source/sass/blocks/footer/socials.scss
@@ -3,6 +3,7 @@
   list-style-type: none;
   display: flex;
   align-items: center;
+  flex-flow: wrap;
   gap: 16px;
 }
 
