--- a/source/sass/blocks/form/form.scss
+++ b/source/sass/blocks/form/form.scss
@@ -4,13 +4,17 @@
 }
 
 .form__wrapper {
-  display: flex;
-  flex-flow: wrap column;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: min-content;
+  justify-items: center;
   gap: 20px;
-  align-items: center;
-  padding: 176px 0 0;
+  align-items: start;
+  padding: 176px 0 20px;
   width: 320px;
-  min-height: 638px;
+  height: 638px;
+  overflow-y: auto;
+  overflow-x: clip;
   background:
     image-set(
       url("../../../img/form/forest-mobile@1x.webp") type("image/webp") 1x,
@@ -23,6 +27,24 @@
   background-position: left;
   background-blend-mode: overlay;
   background-repeat: no-repeat;
+}
+
+.form__wrapper::-webkit-scrollbar {
+  width: 6px;
+}
+
+.form__wrapper::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.form__wrapper::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  border: 2px solid transparent;
+}
+
+.form__wrapper::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .form__content-wrapper {
@@ -69,7 +91,11 @@
   position: absolute;
 
   @include apply-styles($desktop-button-input-regular);
-
+  overflow-y: auto;
+  overflow-x: clip;
+  height: 50px;
+  display: flex;
+  align-items: center;
   color: $primary;
   top: 50%;
   transform: translateY(-50%);
@@ -78,7 +104,7 @@
 }
 
 .form__input {
-  min-height: 50px;
+  height: 50px;
   width: 100%;
   padding: 13px 15px;
   font-family: inherit;
@@ -168,6 +194,7 @@
   .form__wrapper {
     width: 768px;
     min-height: 680px;
+    padding: 176px 40px;
     gap: 22px;
     background:
       image-set(
@@ -181,10 +208,11 @@
 
   .form__label {
     left: 30px;
+    height: 56px;
   }
 
   .form__input {
-    min-height: 56px;
+    height: 56px;
     width: 100%;
     padding: 15px 30px;
     font-family: inherit;
@@ -230,7 +258,7 @@
   .form__wrapper {
     width: 1440px;
     min-height: 760px;
-    padding: 286px 0 0;
+    padding: 286px 0 60px;
     gap: 36px;
     background:
       image-set(
